# BigDataProject

./: .gitignore  Config.py  DataAugmenter.py  DataChecker.py  DataCleaner.py  DataLoader.py  DataSetEnum.py  DataSplit.py  EDA.ipynb  GRADING.md  Pipeline.py  README.md  READMEV2.md  config.yaml  data.ipynb  integrate_data.ipynb  pandasExperiment.ipynb  pipeline.ipynb  pre_preprocess.py  predict.ipynb  predict.py  predict_config.yaml  pyproject.toml  run.py  tmp.ipynb  tmp.py  train.ipynb  train.py  train_config.yaml  utils.py
Pipelines/: PipelineModuleFactory.py  machine_learning_pipeline.py
Pipelines/Check/: GXDataQualityCheckModule.py
Pipelines/Collect/: DataLoader.py  (+1 more)
Preprocessing/: PreprocessingConfig.py  PreprocessingPipeline.py  PreprocessingProtocol.py
data/: README.md  train-1-400-translations.csv
deprecated/: Config.py  ConfigV2.py  DataAugmenter.py  DataCleaner.py  DataLoader.py  Pipeline.py  PreprocessingConfig.py  PreprocessingPipeline.py  collectmodules.py  modules.py  predict.ipynb  tmp.ipynb  train.ipynb  train.py
experiments/: pandasExperiment.ipynb  train.ipynb
grading_checklist/: pipeline_checklist.md
gx/: great_expectations.yml
predictions0/: .part-00000-d452b7f6-9aa0-49cc-9d46-28ba51535e2d-c000.csv.crc  part-00000-d452b7f6-9aa0-49cc-9d46-28ba51535e2d-c000.csv
predictions1/: .part-00000-a0cc8531-c65a-4634-a73d-5bfbb38c1d22-c000.csv.crc  part-00000-a0cc8531-c65a-4634-a73d-5bfbb38c1d22-c000.csv
sentiment_analysis/: README.md  sentiment_analysis.ipynb
utils/: convert_config_to_pyspark_schema.py  initialize_modules_from_yaml.py
(+283 files in other folders)
